Edited wiki page through web user interface.

--- a/wiki/Releases.wiki
+++ b/wiki/Releases.wiki
@@ -8,9 +8,9 @@ I am encouraging people to use the maven repository, through Maven, Ivy or any o
 
 We currently have 2 releases available under our [http://code.google.com/p/facebook-java-api/downloads/list Downloads] page.  I'll explain the differences here:
 
+  * 2.1.0
+    * Additional bug fixes and coverage of new API items.
   * 2.0.5
-    * Many bug bug fixes and api enhancements, since Facebook keeps changing their apis.
-  * 2.0.4
     * Many bug bug fixes and api enhancements, since Facebook keeps changing their apis.
 
 === Composition Branch ===
@@ -24,6 +24,10 @@ This is currently posted to the snapshot repository as:
 You'll find information on how to get at this release through the Maven snapshot repository at MavenSupport.
 
 === Deprecated ===
+  * 2.0.5
+    * Many bug bug fixes and api enhancements, since Facebook keeps changing their apis.
+  * 2.0.4
+    * Many bug bug fixes and api enhancements, since Facebook keeps changing their apis.
   * 2.0.3
     * Many bug bug fixes and api enhancements, since Facebook keeps changing their apis.
   * 2.0.2
