--- a/wiki/DesktopMode.wiki
+++ b/wiki/DesktopMode.wiki
@@ -64,6 +64,10 @@ The ExtensibleClient class currently confuses the use case outlined in this docu
     * The Desktop Client is restricted as to which methods it can call.
     * It's "in desktop mode" and should call setIsDesktop(true) so that its Facebook calls are handled in the best way possible.
 
+Dave Boden's suggested change is to create an overloaded version of auth_getSession with a boolean createTemporarySecret parameter. The method would return a tuple of the SESSION_KEY and the TEMPORARY SECRET. That would allow us to get rid of the cacheSessionSecret which shouldn't be a member variable of ExtensibleClient, it should be short lived. The server should be able to use the same ExtensibleClient object to generate thousands of authentication tokens and session keys; the generated TEMPORARY SECRET doesn't need to be linked to the ExtensibleClient that created it.
+
+The meaning of setIsDesktop(true) would then be clarified in that it means "a TEMPORARY SECRET has been used when creating this Facebook Client; please call Facebook Server methods accordingly. If we could ascertain whether a SECRET was temporary or not, we could happily remove the setIsDesktop() method and derive whether or not to behave like a desktop application.
+
 == Does the Facebook Java API need to know which methods are out of bounds for TEMPORARY SECRETs? ==
 
 Yes. Some of the methods, for example setFBML, must be called differently if we're using a TEMPORARY SECRET. For those that are not allowed whatsoever, it's perfectly acceptable to have no special code for Desktop mode and let the Facebook server deny access and provide a suitable error message. We don't want to uselessly "optimise" things to avoid a call to the Facebook server in this situation. Calling a function that you're not allowed to call from a Desktop client is a programmer error that will never make it into a production-quality Desktop client.
