Edited wiki page through web user interface.

--- a/wiki/DesktopMode.wiki
+++ b/wiki/DesktopMode.wiki
@@ -5,6 +5,13 @@
 
 The [http://wiki.developers.facebook.com/index.php/Login_Desktop_App Desktop Authentication information on the official Facebook Wiki] really doesn't explain what it means to authenticate a desktop application and why there's a slightly different process in place.
 
+= Do I really need server part for my desktop application? =
+
+If you have hundreds of users (and you don't want to provide your SECRET) then yes, you do need a server component which will have a very simple job. The desktop application will need to contact your server on startup:
+  * Your server connects to Facebook using your SECRET.
+  * Your server generates a session secret for the user and passes it back to the desktop application.
+  * The desktop application uses this "session secret" to connect directly to Facebook.com. It never gets to know your real SECRET.
+
 = Is your application set to Desktop? =
 
 It's very important that your application is set to the correct mode. If it isn't set to desktop mode, the Facebook server won't understand when you try to pass a Session Secret. You'll get an "Invalid Signature" error because Facebook is not expecting a Session Secret. Conversely, if you're passing a normal SECRET through and your application is set to Desktop, you'll see errors.
