--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -19,3 +19,6 @@
 
   * I want to contribute. How do I get my hands on the code for this project and build it in Eclipse?
     * The process has been documented on the [http://groups.google.com/group/facebook-java/web/build-code-in-eclipse build-code-in-eclipse] page.
+
+  * Does the Facebook Java API work on J2ME for mobile devices?
+    * No. The Facebook Java API uses Java SE 5 Generics and a significant number of other J2SE features like JAXB which we wouldn't want to be without. Making a library compatible with J2ME involves making significant sacrifices in order to get the benefit of the product working on mobile devices. There are therefore no plans to get the Facebook Java API in its current form working with J2ME. A separate project has been proposed on the forum; please search the forum for more details.
