--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -23,7 +23,7 @@
   * I want to contribute. How do I get commit rights to SVN so that I can check my changes in?
     * The normal procedure (with pretty much all open source projects) is.
       * Please identify a change you'd like to make, either a bug fix or a new feature.
-      * [[http://code.google.com/p/facebook-java-api/issues/list Post an issue] for it, if one doesn't already exist, and upload a patch file containing your changes.
+      * [http://code.google.com/p/facebook-java-api/issues/list Post an issue] for it, if one doesn't already exist, and upload a patch file containing your changes.
       * Alert developers on the mailing list that there's an improvement ready to go in.
       * One of the existing developers will be happy to apply your changes and, if it's well thought out and high quality, give you commit privileges so that you can do it yourself next time.
     * Looking forward to having you onboard! :)
